Refactor AFMA payload storage backing